# vooki-image-viewer

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE-IMAGES  LICENSE-OPENCLIPART  README.md  sonar-project.properties
.github/workflows/: analysis-sonarcloud.yml  linux-build.yml  macos-build.yml  reusable_linux_build.yml  win-build.yml
components/workarounds/: jxl.cpp  jxl_p.h  microexif.cpp  microexif_p.h  util_p.h
debian/: README.Debian  README.source  changelog  control  copyright  create-deb-snapshot.sh  generate-changelog-snapshot.sh  generate-changelog.sh  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  vookiimageviewer.cron.d.ex  vookiimageviewer.doc-base.EX  watch  watch.ex
src/: main.cpp
src/abstraction/: darkmode.h  init.h
src/abstraction/mac/: darkmode.mm  init.mm
src/abstraction/unix/: darkmode.cpp  init.cpp
src/abstraction/win/: darkmode.cpp  init.cpp
src/application/: Application.cpp  Application.h  main.cpp
src/model/: FileSystemSortFilterProxyModel.cpp  FileSystemSortFilterProxyModel.h  ImageCatalog.cpp  ImageCatalog.h
src/model/test/: FileSystemSortFilterProxyModelTest.cpp  FileSystemSortFilterProxyModelTest.h  ImageCatalogTest.cpp  ImageCatalogTest.h  main.cpp
src/plugins/: kimageformats  plugins.pro
src/plugins/devil/: devil.json  devilHandler.cpp  devilHandler.h  devilPlugin.cpp  devilPlugin.h
src/plugins/heicimage/: heic.json  heicHandler.cpp  heicHandler.h  heicPlugin.cpp  heicPlugin.h
src/plugins/kimageformats/: AUTHORS  ani.cpp  ani.json  ani_p.h  avif.cpp  avif_p.h  eps.cpp  eps.json  eps_p.h  exr.cpp  exr.json  exr_p.h  gimp_p.h  hdr.cpp  hdr.json  hdr_p.h  heif.cpp  heif.json  heif_p.h  jxl.cpp  jxl_p.h  kra.cpp  kra.h  kra.json  ora.cpp  ora.h  ora.json  pcx.cpp  pcx.json  pcx_p.h  pic.cpp  pic.json  pic_p.h  psd.cpp  psd.json  psd_p.h  ras.cpp  ras.json  ras_p.h  raw.cpp  (+12 more)
src/plugins/rawthumb/: rawThumbHandler.cpp  rawThumbHandler.h  rawThumbPlugin.cpp  rawThumbPlugin.h  rawthumb.json
src/processing/: AutoPtrWrapper.h  Exiv2ImageAutoPtrWrapper.cpp  Exiv2ImageAutoPtrWrapper.h  ImageLoader.cpp  ImageLoader.h  ImageProcessor.cpp  ImageProcessor.h  MetadataExtractor.cpp  MetadataExtractor.h
src/processing/test/: ImageLoaderTest.cpp  ImageLoaderTest.h  main.cpp
src/processing/test/resources/: animated_numbers.avifs  numbers.afphoto
src/processing/transformation/: ImageBorder.cpp  ImageBorder.h  ImageFlip.cpp  ImageFlip.h  ImageRotation.cpp  ImageRotation.h  ImageTransformation.h  ImageTransformationBase.h  ImageZoom.cpp  ImageZoom.h
src/processing/transformation/test/: ImageBorderTest.cpp  ImageBorderTest.h  ImageFlipTest.cpp  ImageFlipTest.h  ImageRotationTest.cpp  ImageRotationTest.h  ImageTransformationBaseTest.cpp  ImageTransformationBaseTest.h  ImageZoomTest.cpp  ImageZoomTest.h  main.cpp
src/resource/: vookiimageviewer.qrc
src/resource/openclipart/: vookiimageviewericon.icns
src/resource/text/: about.html  aboutApp.md  aboutExiv2.md  aboutExpat.md  aboutIcon54.html  aboutIcon54.md  aboutKDMacTouchBar.html  aboutKDMacTouchBar.md  aboutKImageFormats.html  aboutKImageFormats.md  aboutLibRaw.html  aboutLibRaw.md  aboutLibde265.html  aboutLibde265.md  aboutLibheif.html  aboutLibheif.md  aboutLibjpeg-turbo.md  aboutOpenClipart.html  aboutOpenClipart.md  aboutOpenSSL.html  aboutQt.html  aboutQt.md  aboutX265.html  aboutX265.md  aboutbrotli.md  abouthighway.md  aboutlibjxl.md  aboutqcoro.md  aboutzlib.md  changelog.md
src/resource/translations/: VookiImageViewer_cs.ts  VookiImageViewer_cs_CZ.ts  VookiImageViewer_da.ts  VookiImageViewer_da_DK.ts  VookiImageViewer_de.ts  VookiImageViewer_de_DE.ts  VookiImageViewer_el.ts  VookiImageViewer_el_GR.ts  VookiImageViewer_en_US.ts  VookiImageViewer_es.ts  VookiImageViewer_es_ES.ts  VookiImageViewer_et.ts  VookiImageViewer_et_EE.ts  VookiImageViewer_fi.ts  VookiImageViewer_fi_FI.ts  VookiImageViewer_fr.ts  VookiImageViewer_fr_CA.ts  VookiImageViewer_fr_FR.ts  VookiImageViewer_hr.ts  VookiImageViewer_hr_HR.ts  VookiImageViewer_hu.ts  VookiImageViewer_hu_HU.ts  VookiImageViewer_ja.ts  VookiImageViewer_ja_JP.ts  VookiImageViewer_nl.ts  VookiImageViewer_nl_NL.ts  VookiImageViewer_ro.ts  VookiImageViewer_ro_RO.ts  VookiImageViewer_ru.ts  VookiImageViewer_ru_RU.ts  VookiImageViewer_sk.ts  VookiImageViewer_sk_SK.ts  VookiImageViewer_sl.ts  VookiImageViewer_sl_SI.ts  VookiImageViewer_sv.ts  VookiImageViewer_sv_SE.ts  VookiImageViewer_tr.ts  VookiImageViewer_tr_TR.ts  VookiImageViewer_uk.ts  VookiImageViewer_uk_UA.ts  (+3 more)
src/resource/translations/.tx/: config
src/ui/: AboutComponentsDialog.cpp  AboutComponentsDialog.h  FileSystemTreeView.cpp  FileSystemTreeView.h  ImageArea.cpp  ImageArea.h  ImageAreaWidget.cpp  ImageAreaWidget.h  InfoTableWidget.cpp  InfoTableWidget.h  MainWindow.cpp  MainWindow.h  ReleaseNotesDialog.cpp  ReleaseNotesDialog.h  SettingsDialog.cpp  SettingsDialog.h  SettingsShortcutsTableWidget.cpp  SettingsShortcutsTableWidget.h  StatusBar.cpp  StatusBar.h
src/ui/forms/: About.ui  AboutComponentsDialog.ui  AboutDialog.ui  AboutSupportedFormatsDialog.ui  MainWindow.ui  ReleaseNotesDialog.ui  SettingsDialog.ui
src/ui/support/: Languages.cpp  Languages.h  Languages_m_localizations.h.in  RecentFileAction.cpp  RecentFileAction.h  Settings.cpp  Settings.h  SettingsShortcutsTableWidgetItem.cpp  SettingsShortcutsTableWidgetItem.h  SettingsStrings.h
src/ui/support/test/: RecentFileActionTest.cpp  RecentFileActionTest.h  SettingsShortcutsTableWidgetItemTest.cpp  SettingsShortcutsTableWidgetItemTest.h  (+3 more)
src/ui/test/: SettingsDialogTest.cpp  SettingsDialogTest.h  main.cpp
src/util/: ByteSize.cpp  ByteSize.h  EnumClassArray.h  RotatingIndex.h  array.h  compiler.h  misc.cpp  misc.h  testing.h  version.h  version.h.in
src/util/test/: ArrayTest.cpp  ArrayTest.h  ByteSizeTest.cpp  ByteSizeTest.h  EnumClassArrayTest.cpp  EnumClassArrayTest.h  MiscTest.cpp  MiscTest.h  RotatingIndexTest.cpp  RotatingIndexTest.h  main.cpp
update/: RELEASES.json
(+15 files in other folders)
